fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 100px;
+    margin-right: 70px;
 }
 
 nav ul li a {
